--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,12 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+    <string-array name="qual_array">
+            <item>B.Sc</item>
+            <item>M.sc</item>
+            <item>PhD</item>
+
+    </string-array>
+
 </resources>
