--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,9 +16,19 @@
     </string>
     <string name="spinner_title">Select Qualification</string>
     <string-array name="qual_array">
-        <item>B.Sc</item>
-        <item>M.sc</item>
-        <item>PhD</item>
+        <item>B.E/B.Tech</item>
+        <item>M.E/M.Tech</item>
+        <item>Ph.D</item>
+    </string-array>
+    <string name="sp_title">Select Branch</string>
+    <string-array name="branch_array">
+        <item>CSE</item>
+        <item>CIV</item>
+        <item>ECE</item>
+        <item>ISE</item>
+        <item>EEE</item>
+        <item>EIE</item>
+        <item>MECH</item>
 
     </string-array>
 
